fix: Add reduced size banner image
Resized and cropped banner image and replaced in the application.

--- a/static/styles.css
+++ b/static/styles.css
@@ -17,7 +17,7 @@
 
 .banner {
   background-color: transparent;
-  background-image: url('/static/images/garden-1200.JPG');
+  background-image: url('/static/images/garden-banner2.JPG');
   background-size: cover;
   height: 150px;
   color: whitesmoke;
